[gd_scene load_steps=4 format=3 uid="uid://dailymenu123"]

[ext_resource type="Script" path="res://DailyMenu.gd" id="1_menu"]
[ext_resource type="Theme" uid="uid://flattheme123" path="res://flat_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" uid="uid://bx308tdkipqcj" path="res://platform/tileYellow_03.png" id="3_bg"]

[node name="DailyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.6, 0.86, 1)

[node name="Pattern" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bg")
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="DateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Daily Challenge"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.7)
theme_override_font_sizes/font_size = 24
text = "Back"
flat = true

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
